# wine_quality

./: README.md  pyproject.toml
mlruns/0/: meta.yaml
wine/wine_quality/: wine_quality.ipynb
wine/wine_quality/mlruns/0/: meta.yaml
wine/wine_quality/mlruns/350587243993791795/: meta.yaml
wine/wine_quality/mlruns/350587243993791795/1c6bb891c4ab47d1a2515b00ee5dcbb0/: meta.yaml
wine/wine_quality/mlruns/350587243993791795/1c6bb891c4ab47d1a2515b00ee5dcbb0/artifacts/: metric_info.json
wine/wine_quality/mlruns/350587243993791795/1c6bb891c4ab47d1a2515b00ee5dcbb0/metrics/: LinearRegression_score_X_test  mean_squared_error_X_test  r2_score_X_test  training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
wine/wine_quality/mlruns/350587243993791795/1c6bb891c4ab47d1a2515b00ee5dcbb0/tags/: mlflow.log-model.history  mlflow.runName
wine/wine_quality/mlruns/350587243993791795/41af1b7cb5db4e119e6b2ab01c3d164b/: meta.yaml
wine/wine_quality/mlruns/350587243993791795/41af1b7cb5db4e119e6b2ab01c3d164b/metrics/: LinearRegression_score_X_test  training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
wine/wine_quality/mlruns/350587243993791795/4f1086accba44192b45c7410fb25d34b/: meta.yaml
wine/wine_quality/mlruns/350587243993791795/54eb968e5c2b45e7a3307caba3fcf6c1/: meta.yaml
wine/wine_quality/mlruns/350587243993791795/96d41998e8ad4559919b7491c9686b84/: meta.yaml
(+46 files in other folders)
