[project]
name = "Test_wine_quality"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "--help", email = "dvazquez@gradiant.org"},
]
dependencies = [
    "pandas>=2.2.2",
    "jupyterlab>=4.2.2",
    "scikit-learn==1.4.2",
    "mlflow>=2.14.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
